# PCD-E57

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  e57.cpp  e57.h  main.cpp  manifest.json  utils.h
E57/: E57FoundationImpl.cpp  E57Simple.cpp  E57Simple.h  E57SimpleImpl.cpp  E57SimpleImpl.h  time_conversion.cpp
cmake/Modules/: FindXerces.cmake  FindXercesC.cmake
src/: CMakeLists.txt
src/converter/: CMakeLists.txt
src/converter/include/: ArgParser.h  FileType.h
src/converter/src/: ArgParser.cpp  main.cpp
src/libE57/: CMakeLists.txt
src/libE57/include/e57/: E57Simple.h  E57SimpleImpl.h
src/libE57/src/: E57Foundation.cpp  E57FoundationImpl.cpp  E57Simple.cpp  E57SimpleImpl.cpp  time_conversion.c  time_conversion.cpp
src/libconverter/: CMakeLists.txt
src/libconverter/include/libconverter/: utils.h
src/libconverter/src/: e57.cpp
